--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,7 +6,8 @@
 @import "container.scss";
 @import "animation.scss";
 
-@import "blocks/header2.scss";
+@import "blocks/header.scss";
+@import "blocks/header-menu.scss";
 @import "blocks/catalog.scss";
 @import "blocks/promo.scss";
 @import "blocks/github.scss";
