--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -1,7 +1,10 @@
-.catalog-container {
-  padding-top: 60px;
+.catalog__container {
+  padding-top: 30px;
   padding-bottom: 20px;
 }
+.catalog__title {
+}
+
 .catalog-grid {
   color: var(--basic-black);
   font-family: "Roboto", "Arial", sans-serif;
@@ -80,7 +83,7 @@
     left: 0;
     z-index: 1;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 }
 .catalog-item__hover-menu {
@@ -97,6 +100,10 @@
   flex-direction: column;
   align-items: center;
   padding: 26px 0 44px 0;
+
+  @media (max-width: $width-tablet+px) {
+    z-index: 5;
+  }
 }
 .catalog-item__title-link {
   text-decoration: none;
