--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -1,5 +1,5 @@
 .skills {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 .skills__container {
 }
@@ -21,7 +21,7 @@
   background: #eaeaea8a;
   border-radius: 10px;
   padding: 10px;
-  min-width: 100px;
+  width: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,6 +30,7 @@
   font-size: 0;
   position: relative;
   overflow: hidden;
+
   &:after {
     content: "";
     position: absolute;
@@ -42,6 +43,7 @@
     transition: all 0.7s ease 0s;
     box-shadow: 0 0 60px 5px white;
   }
+
   &:before {
     content: "";
     position: absolute;
@@ -54,12 +56,47 @@
     transition: all 0.7s ease 0.3s;
     box-shadow: 0 0 60px 5px white;
   }
+
   &:hover {
     &:after {
       left: 110%;
     }
+
     &:before {
       right: 110%;
     }
+  }
+
+  @media (min-width: $width-tablet+px) {
+    width: 200px;
+  }
+}
+.skills__item--more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.skills__item-more {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  background: black;
+  border-radius: 50%;
+
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: inherit;
+    display: block;
+  }
+  &::after{
+    left: 110%;
+  }
+  &::before{
+    right: 110%;
   }
 }
