--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -4,3 +4,11 @@
   animation: colorChange 40s infinite ease-in-out;
   animation-direction: alternate;
 }
+
+.main-title {
+  font-size: clamp(20px, 3vw, 36px);
+  color: #0b236f;
+  line-height: clamp(24px, 3vw, 40px);
+  text-align: center;
+  margin-bottom: 12px;
+}
