--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -83,6 +83,13 @@
     left: 0;
     z-index: 1;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.catalog-item__img--pognali {
+  img {
     height: auto;
   }
 }
@@ -99,7 +106,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 26px 0 44px 0;
+  padding: 26px 20px 44px;
 
   @media (max-width: $width-tablet+px) {
     z-index: 5;
@@ -130,8 +137,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 18px;
-  color: var(--contact-text);
-  max-width: 255px;
+  color: var(--basic-black);
   text-align: center;
 }
 .catalog-item__btn {
