--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,7 @@
 @import "main.scss";
 @import "container.scss";
 @import "animation.scss";
+@import "waves.scss";
 
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
