--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -35,7 +35,10 @@
   --catalog-item-shadow: 0px 6px 15px rgba(0, 1, 1, 0.25);
   --decor-hover: #4d4d4d;
   --slider-dot: #ababab;
-  --slider-dot-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15); }
+  --slider-dot-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+  --color1: red;
+  --color2:blue;
+  --color3:green; }
 
 * {
   padding: 0px;
@@ -171,8 +174,8 @@ h6 {
   display: grid;
   grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content 1fr min-content;
-  -webkit-animation: colorChange 40s infinite ease-in-out;
-          animation: colorChange 40s infinite ease-in-out;
+  -webkit-animation: colorChangeAnimista 20s linear infinite alternate both;
+          animation: colorChangeAnimista 20s linear infinite alternate both;
   -webkit-animation-direction: alternate;
           animation-direction: alternate; }
 
@@ -225,6 +228,79 @@ h6 {
     background: radial-gradient(circle, #fad07b 0%, #bea96d 25%, #a68639 50%, #887a15 100%); }
   100% {
     background: radial-gradient(circle, #f2f039 0%, #c8c358 25%, #d0ba23 50%, #aba411 100%); } }
+
+@-webkit-keyframes colorChangeAnimista {
+  0% {
+    background: #19dcea; }
+  25% {
+    background: #b22cff; }
+  50% {
+    background: #ea2222; }
+  75% {
+    background: #f5be10; }
+  100% {
+    background: #3bd80d; } }
+
+@keyframes colorChangeAnimista {
+  0% {
+    background: #19dcea; }
+  25% {
+    background: #b22cff; }
+  50% {
+    background: #ea2222; }
+  75% {
+    background: #f5be10; }
+  100% {
+    background: #3bd80d; } }
+
+.waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: -7px;
+  /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px; }
+
+.waves-animation > use {
+  -webkit-animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+          animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite; }
+
+.waves-animation > use:nth-child(1) {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s; }
+
+.waves-animation > use:nth-child(2) {
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s; }
+
+.waves-animation > use:nth-child(3) {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+  -webkit-animation-duration: 13s;
+          animation-duration: 13s; }
+
+.waves-animation > use:nth-child(4) {
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s; }
+
+@-webkit-keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0); }
+  100% {
+    transform: translate3d(85px, 0, 0); } }
+
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0); }
+  100% {
+    transform: translate3d(85px, 0, 0); } }
 
 .header {
   position: relative; }
@@ -491,6 +567,16 @@ h6 {
   text-transform: uppercase;
   color: var(--basic-white); }
 
+.catalog-item__repo-link {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  outline: 1px solid black; }
+
 .promo {
   padding: 20px 0;
   height: 75vh;
@@ -511,7 +597,7 @@ h6 {
   height: 250px;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 0 4px 0 black;
+  box-shadow: 0 0 4px 0 black, 0 10px 100px #fff, 0 10px 200px #eee;
   margin-bottom: 10px; }
 
 .poromo__img {
