--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -39,3 +39,20 @@
   }
 }
 
+@keyframes colorChangeAnimista {
+  0% {
+    background: #19dcea;
+  }
+  25% {
+    background: #b22cff;
+  }
+  50% {
+    background: #ea2222;
+  }
+  75% {
+    background: #f5be10;
+  }
+  100% {
+    background: #3bd80d;
+  }
+}
