--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -18,7 +18,7 @@
   height: 250px;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 0 4px 0 black;
+  box-shadow: 0 0 4px 0 black, 0 10px 100px #fff, 0 10px 200px #eee;
   margin-bottom: 10px;
 }
 .poromo__img {
