--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,7 +1,8 @@
 .page {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
-  animation: colorChange 40s infinite ease-in-out;
+  // animation: colorChange 40s linear infinite alternate both;
+  animation: colorChangeAnimista 20s linear infinite alternate both;
   animation-direction: alternate;
 }
 
