--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -46,4 +46,7 @@ $fontfamily: "Roboto", "Arial", sans-serif;
 
   --slider-dot: #ababab;
   --slider-dot-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+  --color1: red;
+  --color2:blue;
+  --color3:green;
 }
