--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,9 +1,10 @@
 .page {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
-  // animation: colorChange 40s linear infinite alternate both;
-  animation: colorChangeAnimista 20s linear infinite alternate both;
+  animation: colorChange 40s linear infinite alternate both;
+  // animation: colorChangeAnimista 20s linear infinite alternate both;
   animation-direction: alternate;
+  background-color: rosybrown;
 }
 
 .main-title {
