--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -65,6 +65,9 @@ header,
 section {
   display: block; }
 
+html {
+  scroll-behavior: smooth; }
+
 html,
 body {
   height: 100%; }
@@ -174,10 +177,11 @@ h6 {
   display: grid;
   grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content 1fr min-content;
-  -webkit-animation: colorChangeAnimista 20s linear infinite alternate both;
-          animation: colorChangeAnimista 20s linear infinite alternate both;
+  -webkit-animation: colorChange 40s linear infinite alternate both;
+          animation: colorChange 40s linear infinite alternate both;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate; }
+          animation-direction: alternate;
+  background-color: rosybrown; }
 
 .main-title {
   font-size: clamp(20px, 3vw, 36px);
@@ -252,6 +256,100 @@ h6 {
     background: #f5be10; }
   100% {
     background: #3bd80d; } }
+
+@-webkit-keyframes slit-in-vertical {
+  0% {
+    transform: translateZ(-800px) rotateY(90deg);
+    opacity: 0; }
+  54% {
+    transform: translateZ(-160px) rotateY(87deg);
+    opacity: 1; }
+  100% {
+    transform: translateZ(0) rotateY(0); } }
+
+@keyframes slit-in-vertical {
+  0% {
+    transform: translateZ(-800px) rotateY(90deg);
+    opacity: 0; }
+  54% {
+    transform: translateZ(-160px) rotateY(87deg);
+    opacity: 1; }
+  100% {
+    transform: translateZ(0) rotateY(0); } }
+
+@-webkit-keyframes flicker-1 {
+  0%,
+  100% {
+    opacity: 1; }
+  41.99% {
+    opacity: 1; }
+  42% {
+    opacity: 0; }
+  43% {
+    opacity: 0; }
+  43.01% {
+    opacity: 1; }
+  47.99% {
+    opacity: 1; }
+  48% {
+    opacity: 0; }
+  49% {
+    opacity: 0; }
+  49.01% {
+    opacity: 1; } }
+
+@keyframes flicker-1 {
+  0%,
+  100% {
+    opacity: 1; }
+  41.99% {
+    opacity: 1; }
+  42% {
+    opacity: 0; }
+  43% {
+    opacity: 0; }
+  43.01% {
+    opacity: 1; }
+  47.99% {
+    opacity: 1; }
+  48% {
+    opacity: 0; }
+  49% {
+    opacity: 0; }
+  49.01% {
+    opacity: 1; } }
+
+@-webkit-keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1); }
+  30% {
+    transform: scale3d(1.25, 0.75, 1); }
+  40% {
+    transform: scale3d(0.75, 1.25, 1); }
+  50% {
+    transform: scale3d(1.15, 0.85, 1); }
+  65% {
+    transform: scale3d(0.95, 1.05, 1); }
+  75% {
+    transform: scale3d(1.05, 0.95, 1); }
+  100% {
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1); }
+  30% {
+    transform: scale3d(1.25, 0.75, 1); }
+  40% {
+    transform: scale3d(0.75, 1.25, 1); }
+  50% {
+    transform: scale3d(1.15, 0.85, 1); }
+  65% {
+    transform: scale3d(0.95, 1.05, 1); }
+  75% {
+    transform: scale3d(1.05, 0.95, 1); }
+  100% {
+    transform: scale3d(1, 1, 1); } }
 
 .waves {
   position: relative;
@@ -426,9 +524,11 @@ h6 {
       outline: none;
       border: none;
       width: 24px;
-      height: 18px; } }
+      height: 18px;
+      box-shadow: 0 0 2px 0 black; } }
 
 .catalog__container {
+  position: relative;
   padding-top: 30px;
   padding-bottom: 20px; }
 
@@ -444,20 +544,38 @@ h6 {
   row-gap: 30px;
   margin: 0 auto;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+  transition: all 0.7s ease;
+  margin-top: -110px; }
 
 .catalog-item {
   border-radius: 5px;
-  position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
+  position: absolute;
+  transform: scale(0);
+  z-index: -1; }
   .catalog-item:hover {
     box-shadow: var(--catalog-item-shadow); }
     .catalog-item:hover .catalog-item__hover-menu {
-      z-index: 5; }
+      z-index: 5;
+      bottom: 0; }
     .catalog-item:hover .catalog-item__img img {
       transform: scale(1.03); }
     .catalog-item:hover .catalog-item__top {
       background: var(--decor-hover); }
+  .catalog-item.active {
+    opacity: 1;
+    position: relative;
+    transform: scale(1);
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    -webkit-animation: slit-in-vertical 0.45s ease-out both;
+            animation: slit-in-vertical 0.45s ease-out both; }
 
 .catalog-item__top {
   height: 40px;
@@ -515,7 +633,7 @@ h6 {
 .catalog-item__hover-menu {
   background: var(--basic-gray);
   position: absolute;
-  bottom: 0;
+  bottom: -100%;
   left: 0;
   right: 0;
   z-index: -1;
@@ -525,10 +643,12 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 26px 20px 44px; }
+  padding: 26px 20px 44px;
+  transition: all 0.5s ease 0s; }
   @media (max-width: 768.98px) {
     .catalog-item__hover-menu {
-      z-index: 5; } }
+      z-index: 5;
+      bottom: 0; } }
 
 .catalog-item__title-link {
   text-decoration: none;
@@ -573,9 +693,69 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  overflow: hidden;
-  outline: 1px solid black; }
+  position: absolute;
+  left: 1em;
+  bottom: 0;
+  overflow: hidden; }
+  .catalog-item__repo-link span {
+    transition: all 0.5s ease 0s;
+    transform: translateY(50px); }
+  @media (min-width: 1300px) {
+    .catalog-item__repo-link:hover {
+      fill: rgba(0, 0, 0, 0.7); }
+      .catalog-item__repo-link:hover span {
+        transform: translateY(0); } }
+
+.catalog-filter {
+  position: sticky;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  z-index: 10; }
+
+.catalog-filter__title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  font-weight: 900;
+  text-shadow: 0 0 4px white; }
+
+.catalog-filter__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 50px; }
+
+.catalog-filter__label {
+  filter: grayscale(1);
+  transform: scale(0.7);
+  transition: all 0.3s linear; }
+  .catalog-filter__label svg {
+    width: 100%;
+    height: 100%; }
+
+.catalog-filter__checkbox:not(:checked) + .catalog-filter__label {
+  -webkit-animation: flicker-1 2s linear infinite both;
+          animation: flicker-1 2s linear infinite both; }
+
+.catalog-filter__checkbox:checked + .catalog-filter__label {
+  filter: grayscale(0);
+  transform: scale(1);
+  -webkit-animation: jello-horizontal 0.9s both;
+          animation: jello-horizontal 0.9s both; }
+
+input[id="check-all"]:not(:checked) + label .icon-check-all__arrow {
+  opacity: 0;
+  transform: rotate(90deg) translateX(-50px); }
+
+input[id="check-all"]:checked + label .icon-check-all__arrow {
+  opacity: 1;
+  transform: rotate(0deg) translateX(0%);
+  transition: all 0.3s ease 0s; }
 
 .promo {
   padding: 20px 0;
@@ -599,6 +779,12 @@ h6 {
   overflow: hidden;
   box-shadow: 0 0 4px 0 black, 0 10px 100px #fff, 0 10px 200px #eee;
   margin-bottom: 10px; }
+  @media (min-width: 1300px) {
+    .promo__img-wrap {
+      width: 350px;
+      height: 350px; }
+      .promo__img-wrap:hover .poromo__img {
+        transform: scale(1.3) translateX(-30px) translateY(-30px); } }
 
 .poromo__img {
   position: absolute;
@@ -607,7 +793,8 @@ h6 {
   top: 0;
   left: 0;
   -o-object-fit: cover;
-     object-fit: cover; }
+     object-fit: cover;
+  transition: all 0.5s ease 0s; }
 
 .promo__title {
   font-weight: 300;
