--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -1,8 +1,7 @@
 .catalog__container {
+  position: relative;
   padding-top: 30px;
   padding-bottom: 20px;
-}
-.catalog__title {
 }
 
 .catalog-grid {
@@ -17,15 +16,24 @@
   margin: 0 auto;
   padding: 0;
   list-style: none;
+  transition: all 0.7s ease;
+  margin-top: -110px;
 }
 .catalog-item {
   border-radius: 5px;
-  position: relative;
   overflow: hidden;
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
+  position: absolute;
+  transform: scale(0);
+  z-index: -1;
   &:hover {
     box-shadow: var(--catalog-item-shadow);
     .catalog-item__hover-menu {
       z-index: 5;
+      bottom: 0;
     }
     .catalog-item__img img {
       transform: scale(1.03);
@@ -33,6 +41,15 @@
     .catalog-item__top {
       background: var(--decor-hover);
     }
+  }
+  &.active {
+    opacity: 1;
+    position: relative;
+    transform: scale(1);
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    animation: slit-in-vertical 0.45s ease-out both;
   }
 }
 .catalog-item__top {
@@ -96,7 +113,7 @@
 .catalog-item__hover-menu {
   background: var(--basic-gray);
   position: absolute;
-  bottom: 0;
+  bottom: -100%;
   left: 0;
   right: 0;
   z-index: -1;
@@ -107,9 +124,11 @@
   flex-direction: column;
   align-items: center;
   padding: 26px 20px 44px;
+  transition: all 0.5s ease 0s;
 
   @media (max-width: $width-tablet+px) {
     z-index: 5;
+    bottom: 0;
   }
 }
 .catalog-item__title-link {
@@ -152,14 +171,31 @@
   color: var(--basic-white);
 }
 
-.catalog-item__repo-link{
+.catalog-item__repo-link {
   color: inherit;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
-position: relative;
-overflow: hidden;
-outline: 1px solid black;
+  position: absolute;
+  left: 1em;
+  bottom: 0;
+  overflow: hidden;
 
+  span {
+    transition: all 0.5s ease 0s;
+    transform: translateY(50px);
+  }
+
+  @media (min-width: $width-desktop+px) {
+    &:hover {
+      fill: rgba($color: black, $alpha: 0.7);
+      span {
+        transform: translateY(0);
+      }
+    }
+  }
+}
+
+.catalog__filter {
 }
