--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -20,7 +20,19 @@
   overflow: hidden;
   box-shadow: 0 0 4px 0 black, 0 10px 100px #fff, 0 10px 200px #eee;
   margin-bottom: 10px;
+
+  @media (min-width: $width-desktop+px) {
+    width: 350px;
+    height: 350px;
+
+    &:hover {
+      .poromo__img {
+        transform: scale(1.3) translateX(-30px) translateY(-30px);
+      }
+    }
+  }
 }
+
 .poromo__img {
   position: absolute;
   width: 100%;
@@ -28,6 +40,7 @@
   top: 0;
   left: 0;
   object-fit: cover;
+  transition: all 0.5s ease 0s;
 }
 .promo__title {
   font-weight: 300;
