--- a/source/scss/null.scss
+++ b/source/scss/null.scss
@@ -12,10 +12,12 @@
 :active {
 	outline: none;
 }
+
 a:focus,
 a:active {
 	outline: none;
 }
+
 aside,
 nav,
 footer,
@@ -23,10 +25,16 @@ header,
 section {
 	display: block;
 }
+
+html {
+	scroll-behavior: smooth;
+}
+
 html,
 body {
 	height: 100%;
 }
+
 body {
 	line-height: 1;
 	font-family: $fontfamily;
