--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
 @import "blocks/catalog.scss";
+@import "blocks/catalog-filter.scss";
 @import "blocks/promo.scss";
 @import "blocks/github.scss";
 @import "blocks/skills.scss";
