--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -191,7 +191,6 @@ h6 {
   margin-bottom: 12px; }
 
 .container {
-  box-sizing: border-box;
   min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
@@ -201,7 +200,7 @@ h6 {
       padding-left: 50px;
       padding-right: 50px;
       max-width: 100%; } }
-  @media (min-width: 768.98px) {
+  @media (min-width: 767.98px) {
     .container {
       padding-left: 50px;
       padding-right: 50px; } }
@@ -411,7 +410,7 @@ h6 {
   justify-items: center;
   -moz-column-gap: 10px;
        column-gap: 10px; }
-  @media (min-width: 768.98px) {
+  @media (min-width: 767.98px) {
     .header__body {
       grid-template-columns: 1fr 3fr 1fr; } }
 
@@ -421,7 +420,7 @@ h6 {
 
 .header-menu__toggle {
   display: none; }
-  @media (max-width: 768.98px) {
+  @media (max-width: 767.98px) {
     .header-menu__toggle {
       display: block;
       padding: 5px;
@@ -434,7 +433,7 @@ h6 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center; }
-  @media (max-width: 768.98px) {
+  @media (max-width: 767.98px) {
     .site-list {
       position: absolute;
       top: 100%;
@@ -470,7 +469,7 @@ h6 {
   grid-template-columns: 1fr;
   justify-items: center;
   gap: 10px; }
-  @media (min-width: 768.98px) {
+  @media (min-width: 767.98px) {
     .header-menu__actions {
       justify-self: end; } }
 
@@ -502,7 +501,7 @@ h6 {
   display: flex;
   align-items: center;
   flex: 0 1 480px; }
-  @media (max-width: 768.98px) {
+  @media (max-width: 767.98px) {
     .header-menu {
       flex: 0 1 440px; } }
   @media (max-width: 374.98px) {
@@ -513,7 +512,7 @@ h6 {
   display: none;
   font-size: 0;
   border: none; }
-  @media (max-width: 768.98px) {
+  @media (max-width: 767.98px) {
     .header-menu__toggle {
       display: inline-block;
       position: absolute;
@@ -528,9 +527,10 @@ h6 {
       box-shadow: 0 0 2px 0 black; } }
 
 .catalog__container {
-  position: relative;
-  padding-top: 30px;
-  padding-bottom: 20px; }
+  position: relative; }
+  @media (max-width: 374.98px) {
+    .catalog__container {
+      padding: 30px 40px 20px; } }
 
 .catalog-grid {
   color: var(--basic-black);
@@ -538,15 +538,20 @@ h6 {
   padding-top: 20px;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, 358px);
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   -moz-column-gap: 41px;
        column-gap: 41px;
   row-gap: 30px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
-  transition: all 0.7s ease;
-  margin-top: -110px; }
+  transition: all 0.7s ease; }
+  @media (min-width: 374.98px) {
+    .catalog-grid {
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); } }
+  @media (min-width: 767.98px) {
+    .catalog-grid {
+      grid-template-columns: repeat(auto-fit, minmax(310px, 1fr)); } }
 
 .catalog-item {
   border-radius: 5px;
@@ -612,7 +617,7 @@ h6 {
     background: var(--basic-white); }
 
 .catalog-item__img {
-  width: 359px;
+  width: 100%;
   height: 578px;
   overflow: hidden;
   position: relative; }
@@ -645,7 +650,7 @@ h6 {
   align-items: center;
   padding: 26px 20px 44px;
   transition: all 0.5s ease 0s; }
-  @media (max-width: 768.98px) {
+  @media (max-width: 767.98px) {
     .catalog-item__hover-menu {
       z-index: 5;
       bottom: 0; } }
@@ -706,37 +711,77 @@ h6 {
       .catalog-item__repo-link:hover span {
         transform: translateY(0); } }
 
+.catalog-item__site-link {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 1em;
+  bottom: 40px;
+  overflow: hidden;
+  fill: black; }
+  .catalog-item__site-link span {
+    transition: all 0.5s ease 0s;
+    transform: translateY(50px); }
+  @media (min-width: 1300px) {
+    .catalog-item__site-link:hover {
+      fill: rgba(0, 0, 0, 0.7); }
+      .catalog-item__site-link:hover span {
+        transform: translateY(0); } }
+
 .catalog-filter {
   position: sticky;
   top: 0;
   left: 0;
   min-width: 100%;
   z-index: 10; }
+  @media (min-width: 374.98px) {
+    .catalog-filter {
+      height: 40px; } }
 
 .catalog-filter__title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   font-weight: 900;
   text-shadow: 0 0 4px white; }
+  @media (min-width: 374.98px) {
+    .catalog-filter__title {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%; } }
 
 .catalog-filter__form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
   align-items: center;
-  justify-content: center;
-  max-width: 50px; }
+  justify-content: space-between;
+  position: relative;
+  padding: 5px 0; }
+  @media (min-width: 374.98px) {
+    .catalog-filter__form {
+      left: -50px;
+      max-width: 50px;
+      flex-direction: column;
+      grid-template-columns: 1fr;
+      gap: 10px; } }
 
 .catalog-filter__label {
   filter: grayscale(1);
   transform: scale(0.7);
   transition: all 0.3s linear; }
+  @media (max-width: 767.98px) {
+    .catalog-filter__label {
+      display: grid;
+      place-items: center;
+      width: 40px;
+      height: 40px; } }
   .catalog-filter__label svg {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    filter: drop-shadow(0 0 2px black); }
 
 .catalog-filter__checkbox:not(:checked) + .catalog-filter__label {
   -webkit-animation: flicker-1 2s linear infinite both;
@@ -747,6 +792,8 @@ h6 {
   transform: scale(1);
   -webkit-animation: jello-horizontal 0.9s both;
           animation: jello-horizontal 0.9s both; }
+  .catalog-filter__checkbox:checked + .catalog-filter__label svg {
+    filter: drop-shadow(0 0 5px black); }
 
 input[id="check-all"]:not(:checked) + label .icon-check-all__arrow {
   opacity: 0;
@@ -846,19 +893,19 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   background: #eaeaea8a;
   border-radius: 10px;
   padding: 20px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  -moz-column-gap: 50px;
-       column-gap: 50px;
-  row-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 20px;
   margin: 0 auto; }
+  @media (min-width: 767.98px) {
+    .skills__list {
+      -moz-column-gap: 50px;
+           column-gap: 50px; } }
 
 .skills__item {
   background: #eaeaea8a;
   border-radius: 10px;
   padding: 10px;
-  width: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -893,9 +940,6 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
     left: 110%; }
   .skills__item:hover:before {
     right: 110%; }
-  @media (min-width: 768.98px) {
-    .skills__item {
-      width: 200px; } }
 
 .skills__item--more {
   display: flex;
