--- a/source/scss/blocks/catalog-filter.scss
+++ b/source/scss/blocks/catalog-filter.scss
@@ -4,24 +4,47 @@
   left: 0;
   min-width: 100%;
   z-index: 10;
+  @media (min-width: $width-mobile+px) {
+    height: 40px;
+  }
 }
+
 .catalog-filter__title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   backdrop-filter: blur(4px);
   font-weight: 900;
   text-shadow: 0 0 4px white;
+  @media (min-width: $width-mobile+px) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
 }
+
 .catalog-filter__form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
   align-items: center;
-  justify-content: center;
-  max-width: 50px;
+  justify-content: space-between;
+  position: relative;
+  padding: 5px 0;
+
+  @media (min-width: $width-mobile+px) {
+    left: -50px;
+    max-width: 50px;
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
 }
+
 .catalog-filter__label {
+  @media (max-width: $width-tablet+px) {
+    display: grid;
+    place-items: center;
+    width: 40px;
+    height: 40px;
+  }
   filter: grayscale(1);
   transform: scale(0.7);
   transition: all 0.3s linear;
@@ -29,6 +52,7 @@
   svg {
     width: 100%;
     height: 100%;
+    filter: drop-shadow(0 0 2px black);
   }
 }
 
@@ -43,17 +67,20 @@
     filter: grayscale(0);
     transform: scale(1);
     animation: jello-horizontal 0.9s both;
+
+    svg {
+      filter: drop-shadow(0 0 5px black);
+    }
   }
 }
 
-.catalog-filter__label {
-}
 input[id="check-all"]:not(:checked) {
   + label .icon-check-all__arrow {
     opacity: 0;
     transform: rotate(90deg) translateX(-50px);
   }
 }
+
 input[id="check-all"]:checked {
   + label .icon-check-all__arrow {
     opacity: 1;
