--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -1,7 +1,10 @@
 .catalog__container {
   position: relative;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  @media (max-width: $width-mobile+px) {
+    padding: 30px 40px 20px;
+  }
+  @media (min-width: $width-mobile+px) {
+  }
 }
 
 .catalog-grid {
@@ -10,14 +13,19 @@
   padding-top: 20px;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, 358px);
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   column-gap: 41px;
   row-gap: 30px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
   transition: all 0.7s ease;
-  margin-top: -110px;
+  @media (min-width: $width-mobile+px) {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+  @media (min-width: $width-tablet+px) {
+    grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
+  }
 }
 .catalog-item {
   border-radius: 5px;
@@ -89,7 +97,7 @@
   }
 }
 .catalog-item__img {
-  width: 359px;
+  width: 100%;
   height: 578px;
   overflow: hidden;
   position: relative;
@@ -197,5 +205,28 @@
   }
 }
 
-.catalog__filter {
+.catalog-item__site-link {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 1em;
+  bottom: 40px;
+  overflow: hidden;
+  fill: black;
+  span {
+    transition: all 0.5s ease 0s;
+    transform: translateY(50px);
+  }
+
+  @media (min-width: $width-desktop+px) {
+    &:hover {
+      fill: rgba($color: black, $alpha: 0.7);
+      span {
+        transform: translateY(0);
+      }
+    }
+  }
 }
