--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -1,27 +1,23 @@
 .skills {
   padding: 30px 0;
 }
-.skills__container {
-}
-.skills__title {
-}
 
 .skills__list {
   background: #eaeaea8a;
   border-radius: 10px;
   padding: 20px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  column-gap: 50px;
-  row-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 20px;
   margin: 0 auto;
+  @media (min-width:$width-tablet+px){
+    column-gap: 50px;
+  }
 }
 .skills__item {
   background: #eaeaea8a;
   border-radius: 10px;
   padding: 10px;
-  width: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,7 +64,6 @@
   }
 
   @media (min-width: $width-tablet+px) {
-    width: 200px;
   }
 }
 .skills__item--more {
@@ -93,10 +88,10 @@
     background: inherit;
     display: block;
   }
-  &::after{
+  &::after {
     left: 110%;
   }
-  &::before{
+  &::before {
     right: 110%;
   }
 }
