--- a/source/scss/blocks/catalog-filter.scss
+++ b/source/scss/blocks/catalog-filter.scss
@@ -45,6 +45,7 @@
     width: 40px;
     height: 40px;
   }
+  cursor: pointer;
   filter: grayscale(1);
   transform: scale(0.7);
   transition: all 0.3s linear;
