--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,6 +6,7 @@
 @import "container.scss";
 @import "animation.scss";
 @import "waves.scss";
+@import "link-on-top.scss";
 
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
