--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -350,6 +350,80 @@ h6 {
   100% {
     transform: scale3d(1, 1, 1); } }
 
+@-webkit-keyframes bounce-top {
+  0% {
+    transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 1; }
+  24% {
+    opacity: 1; }
+  40% {
+    transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  65% {
+    transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  82% {
+    transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  93% {
+    transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  25%,
+  55%,
+  75%,
+  87% {
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  100% {
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1; } }
+
+@keyframes bounce-top {
+  0% {
+    transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 1; }
+  24% {
+    opacity: 1; }
+  40% {
+    transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  65% {
+    transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  82% {
+    transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  93% {
+    transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  25%,
+  55%,
+  75%,
+  87% {
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  100% {
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1; } }
+
 .waves {
   position: relative;
   width: 100%;
@@ -398,6 +472,60 @@ h6 {
     transform: translate3d(-90px, 0, 0); }
   100% {
     transform: translate3d(85px, 0, 0); } }
+
+.link-on-top {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  z-index: 10;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease 0s; }
+  .link-on-top::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    -webkit-clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
+            clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
+    transition: background 0.5s ease 0s; }
+  .link-on-top.active {
+    opacity: 1;
+    visibility: visible; }
+  .link-on-top .link-to-top__ball {
+    background: url(../img/basket-ball-img.svg) center no-repeat;
+    background-size: contain;
+    z-index: 12;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    transition: width 0.3s ease, height 0.3s ease; }
+  @media (min-width: 374.98px) {
+    .link-on-top {
+      bottom: 1em;
+      right: 1em; } }
+  @media (min-width: 1300px) {
+    .link-on-top:hover, .link-on-top:focus, .link-on-top:active {
+      opacity: 1; }
+      .link-on-top:hover .link-to-top__ball, .link-on-top:focus .link-to-top__ball, .link-on-top:active .link-to-top__ball {
+        -webkit-animation: bounce-top 0.9s both;
+                animation: bounce-top 0.9s both; }
+      .link-on-top:hover::after, .link-on-top:focus::after, .link-on-top:active::after {
+        background: rgba(0, 0, 0, 0.5); } }
 
 .header {
   position: relative; }
@@ -533,6 +661,7 @@ h6 {
       padding: 30px 40px 20px; } }
 
 .catalog-grid {
+  min-height: 200px;
   color: var(--basic-black);
   font-family: "Roboto", "Arial", sans-serif;
   padding-top: 20px;
@@ -566,8 +695,13 @@ h6 {
   .catalog-item:hover {
     box-shadow: var(--catalog-item-shadow); }
     .catalog-item:hover .catalog-item__hover-menu {
+      pointer-events: visible;
       z-index: 5;
-      bottom: 0; }
+      bottom: 0;
+      opacity: 1;
+      max-height: 100%;
+      overflow-y: auto;
+      visibility: visible; }
     .catalog-item:hover .catalog-item__img img {
       transform: scale(1.03); }
     .catalog-item:hover .catalog-item__top {
@@ -618,7 +752,7 @@ h6 {
 
 .catalog-item__img {
   width: 100%;
-  height: 578px;
+  min-height: 300px;
   overflow: hidden;
   position: relative; }
   .catalog-item__img img {
@@ -632,23 +766,23 @@ h6 {
     -o-object-fit: cover;
        object-fit: cover; }
 
-.catalog-item__img--pognali img {
-  height: auto; }
-
 .catalog-item__hover-menu {
+  pointer-events: none;
+  visibility: hidden;
   background: var(--basic-gray);
   position: absolute;
-  bottom: -100%;
+  opacity: 0;
+  bottom: -50%;
   left: 0;
   right: 0;
   z-index: -1;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  padding: 26px 20px 44px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 26px 20px 44px;
   transition: all 0.5s ease 0s; }
   @media (max-width: 767.98px) {
     .catalog-item__hover-menu {
@@ -685,7 +819,7 @@ h6 {
   cursor: pointer;
   border: none;
   width: 200px;
-  height: 50px;
+  min-height: 50px;
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
@@ -769,6 +903,7 @@ h6 {
       gap: 10px; } }
 
 .catalog-filter__label {
+  cursor: pointer;
   filter: grayscale(1);
   transform: scale(0.7);
   transition: all 0.3s linear; }
@@ -831,7 +966,11 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
       width: 350px;
       height: 350px; }
       .promo__img-wrap:hover .poromo__img {
-        transform: scale(1.3) translateX(-30px) translateY(-30px); } }
+        transform: scale(1.3) translateX(-30px) translateY(-30px); }
+      .promo__img-wrap:hover ~ .promo__text {
+        -webkit-text-decoration-color: #62d0df;
+                text-decoration-color: #62d0df;
+        text-underline-offset: 0.4em; } }
 
 .poromo__img {
   position: absolute;
@@ -846,12 +985,19 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
 .promo__title {
   font-weight: 300;
   font-size: 36px;
-  line-height: 42px; }
+  line-height: 42px;
+  z-index: 1; }
 
 .promo__text {
   font-weight: bold;
   font-size: 20px;
-  line-height: 23px; }
+  line-height: 23px;
+  letter-spacing: 1px;
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
+  transition: text-underline-offset 300ms, -webkit-text-decoration-color 300ms;
+  transition: text-decoration-color 300ms, text-underline-offset 300ms;
+  transition: text-decoration-color 300ms, text-underline-offset 300ms, -webkit-text-decoration-color 300ms; }
 
 .github {
   background: black;
@@ -966,7 +1112,7 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
     right: 110%; }
 
 .footer {
-  padding: 25px 0; }
+  padding: 25px 0 0; }
 
 .footer__container {
   display: grid;
