--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -3,11 +3,10 @@
   @media (max-width: $width-mobile+px) {
     padding: 30px 40px 20px;
   }
-  @media (min-width: $width-mobile+px) {
-  }
 }
 
 .catalog-grid {
+  min-height: 200px;
   color: var(--basic-black);
   font-family: "Roboto", "Arial", sans-serif;
   padding-top: 20px;
@@ -40,8 +39,13 @@
   &:hover {
     box-shadow: var(--catalog-item-shadow);
     .catalog-item__hover-menu {
+      pointer-events: visible;
       z-index: 5;
       bottom: 0;
+      opacity: 1;
+      max-height: 100%;
+      overflow-y: auto;
+      visibility: visible;
     }
     .catalog-item__img img {
       transform: scale(1.03);
@@ -98,7 +102,8 @@
 }
 .catalog-item__img {
   width: 100%;
-  height: 578px;
+  // height: 578px;
+  min-height: 300px;
   overflow: hidden;
   position: relative;
   img {
@@ -113,25 +118,23 @@
   }
 }
 
-.catalog-item__img--pognali {
-  img {
-    height: auto;
-  }
-}
 .catalog-item__hover-menu {
+  pointer-events: none;
+  visibility: hidden;
   background: var(--basic-gray);
   position: absolute;
-  bottom: -100%;
+  opacity: 0;
+  bottom: -50%;
   left: 0;
   right: 0;
   z-index: -1;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  padding: 26px 20px 44px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 26px 20px 44px;
   transition: all 0.5s ease 0s;
 
   @media (max-width: $width-tablet+px) {
@@ -171,7 +174,7 @@
   cursor: pointer;
   border: none;
   width: 200px;
-  height: 50px;
+  min-height: 50px;
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
