--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -29,6 +29,10 @@
       .poromo__img {
         transform: scale(1.3) translateX(-30px) translateY(-30px);
       }
+      ~ .promo__text {
+        text-decoration-color: #62d0df;
+        text-underline-offset: 0.4em;
+      }
     }
   }
 }
@@ -46,9 +50,15 @@
   font-weight: 300;
   font-size: 36px;
   line-height: 42px;
+  z-index: 1;
 }
 .promo__text {
   font-weight: bold;
   font-size: 20px;
   line-height: 23px;
+  letter-spacing: 1px;
+  // font-style: italic;
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
+  transition: text-decoration-color 300ms, text-underline-offset 300ms;
 }
