--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -3,9 +3,12 @@
 }
 .footer__container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   align-items: center;
   justify-items: center;
+  gap: 20px;
+  @media (min-width: $width-tablet+px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
 
 .footer__logo {
