--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -2,9 +2,16 @@
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   animation: colorChange 40s linear infinite alternate both;
-  // animation: colorChangeAnimista 20s linear infinite alternate both;
+  // animation: colorChangeAnimistaDark 20s linear infinite alternate both;
   animation-direction: alternate;
   background-color: rosybrown;
+
+  @media (prefers-color-scheme: light) {
+    animation: colorChangeAnimistaLight 20s linear infinite alternate both;
+  }
+  @media (prefers-color-scheme: dark) {
+    animation: colorChangeAnimistaDark 20s linear infinite alternate both;
+  }
 }
 
 .main-title {
