--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -1,52 +1,58 @@
 $fontfamily: "Roboto", "Arial", sans-serif;
 
-:root {
-  --basic-black: #000000;
-  --basic-white: #ffffff;
-  --basic-gray: #eeeeee;
-  --input-disabled: #ededed;
-  --contact-text: #666666;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --shadow: 0 0 4px 0 rgb(114, 114, 114), 0 10px 100px rgb(41, 37, 37), 0 10px 200px rgb(126, 119, 119);
+  }
+}
 
-  --footer-text: #444444;
-  --light-gray: rgba(225, 225, 225, 1);
-  --opacity-gray: #eaeaea;
-  --opacity-white: rgba(255, 255, 255, 0.3);
-  --opacity-black: rgba(0, 0, 0, 0.3);
-  --opacity-black-arrow: rgba(0, 0, 0, 0.2);
-  --dot-gray: #c1c1c1;
+@media (prefers-color-scheme: light) {
+  :root {
+    --basic-black: #000000;
+    --basic-white: #ffffff;
+    --basic-gray: #eeeeee;
+    --input-disabled: #ededed;
+    --contact-text: #666666;
 
-  --text-color: #283136;
+    --footer-text: #444444;
+    --light-gray: rgba(225, 225, 225, 1);
+    --opacity-gray: #eaeaea;
+    --opacity-white: rgba(255, 255, 255, 0.3);
+    --opacity-black: rgba(0, 0, 0, 0.3);
+    --opacity-black-arrow: rgba(0, 0, 0, 0.2);
+    --dot-gray: #c1c1c1;
 
-  --link-hover-color: #fb565a;
-  --link-push-color: #a7a7a7;
+    --text-color: #283136;
 
-  --main-btn-color: #fb565a;
-  --main-btn-hover: #e74246;
-  --main-btn-push: #d7373b;
-  --main-btn-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    --link-hover-color: #fb565a;
+    --link-push-color: #a7a7a7;
 
-  --btn-text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
-  --btn-gradient: linear-gradient(180deg, #f26843 0%, #e74a35 100%);
-  --btn-gradient-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
-    linear-gradient(180deg, #f26843 0%, #e74a35 100%);
-  --btn-gradient-active: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
-    linear-gradient(180deg, #f26843 0%, #e74a35 100%);
-  --btn-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-  --btn-shadow-active: inset 0px 2px 2px #942718;
+    --main-btn-color: #fb565a;
+    --main-btn-hover: #e74246;
+    --main-btn-push: #d7373b;
+    --main-btn-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
 
-  --radio-border: #b8b8b8;
-  --pagination-active: #d8d8d8;
+    --btn-text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+    --btn-gradient: linear-gradient(180deg, #f26843 0%, #e74a35 100%);
+    --btn-gradient-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
+      linear-gradient(180deg, #f26843 0%, #e74a35 100%);
+    --btn-gradient-active: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
+      linear-gradient(180deg, #f26843 0%, #e74a35 100%);
+    --btn-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
+    --btn-shadow-active: inset 0px 2px 2px #942718;
 
-  --social-link-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    --radio-border: #b8b8b8;
+    --pagination-active: #d8d8d8;
 
-  --img-border: rgba(0, 0, 0, 0.1);
-  --img-border-hover: #dadada;
-  --catalog-item-shadow: 0px 6px 15px rgba(0, 1, 1, 0.25);
-  --decor-hover: #4d4d4d;
+    --social-link-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
 
-  --slider-dot: #ababab;
-  --slider-dot-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
-  --color1: red;
-  --color2:blue;
-  --color3:green;
+    --img-border: rgba(0, 0, 0, 0.1);
+    --img-border-hover: #dadada;
+    --catalog-item-shadow: 0px 6px 15px rgba(0, 1, 1, 0.25);
+    --decor-hover: #4d4d4d;
+
+    --slider-dot: #ababab;
+    --slider-dot-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+    --shadow: 0 0 4px 0 black, 0 10px 100px #fff, 0 10px 200px #eee;
+  }
 }
