--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -177,9 +177,6 @@ h6 {
   overflow: hidden; }
 
 .page {
-  display: grid;
-  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
-  grid-template-rows: min-content 1fr min-content;
   -webkit-animation: colorChange 40s linear infinite alternate both;
           animation: colorChange 40s linear infinite alternate both;
   -webkit-animation-direction: alternate;
@@ -521,8 +518,13 @@ h6 {
   z-index: 10;
   cursor: pointer;
   opacity: 0;
+  transform: scale(0) rotate(180deg);
   visibility: hidden;
-  transition: opacity 0.5s ease 0s; }
+  transition: all 0.5s ease 0s; }
+  @media (min-width: 374.98px) {
+    .link-on-top {
+      width: 50px;
+      height: 50px; } }
   .link-on-top::after {
     content: "";
     position: absolute;
@@ -536,9 +538,11 @@ h6 {
     -webkit-clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
             clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
     transition: background 0.5s ease 0s; }
-  .link-on-top.active {
+  .link-on-top--visible {
+    transform: scale(1) rotate(0);
     opacity: 1;
-    visibility: visible; }
+    visibility: visible;
+    transition: all 0.5s ease 0s; }
   .link-on-top .link-to-top__ball {
     background: url(../img/basket-ball-img.svg) center no-repeat;
     background-size: contain;
@@ -546,14 +550,14 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
     transition: width 0.3s ease, height 0.3s ease; }
   @media (min-width: 374.98px) {
     .link-on-top {
       bottom: 1em;
       right: 1em; } }
-  @media (min-width: 1300px) {
+  @media (min-width: 767.98px) {
     .link-on-top:hover, .link-on-top:focus, .link-on-top:active {
       opacity: 1; }
       .link-on-top:hover .link-to-top__ball, .link-on-top:focus .link-to-top__ball, .link-on-top:active .link-to-top__ball {
@@ -1165,8 +1169,12 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
-  gap: 20px; }
+  justify-content: space-around;
+  width: 100%; }
+  @media (min-width: 767.98px) {
+    .footer__social {
+      gap: 20px;
+      width: auto; } }
 
 .footer__social-item:hover .footer__social-link {
   fill: rgba(0, 0, 0, 0.7);
