--- a/source/scss/link-on-top.scss
+++ b/source/scss/link-on-top.scss
@@ -11,8 +11,13 @@
   z-index: 10;
   cursor: pointer;
   opacity: 0;
+  transform: scale(0) rotate(180deg);
   visibility: hidden;
-  transition: opacity 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  @media (min-width: $width-mobile+px) {
+    width: 50px;
+    height: 50px;
+  }
 
   &::after {
     content: "";
@@ -27,9 +32,11 @@
     clip-path: polygon(50% 0%, 0% 45%, 37% 45%, 37% 100%, 67% 100%, 67% 45%, 100% 45%);
     transition: background 0.5s ease 0s;
   }
-  &.active {
+  &--visible {
+    transform: scale(1) rotate(0);
     opacity: 1;
     visibility: visible;
+    transition: all 0.5s ease 0s;
   }
 
   .link-to-top__ball {
@@ -39,8 +46,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
     transition: width 0.3s ease, height 0.3s ease;
   }
 
@@ -49,7 +56,7 @@
     right: 1em;
   }
 
-  @media (min-width: $width-desktop+px) {
+  @media (min-width: $width-tablet+px) {
     &:hover,
     &:focus,
     &:active {
