--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -102,7 +102,6 @@
 }
 .catalog-item__img {
   width: 100%;
-  // height: 578px;
   min-height: 300px;
   overflow: hidden;
   position: relative;
@@ -113,7 +112,7 @@
     left: 0;
     z-index: 1;
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
   }
 }
