--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -7,10 +7,10 @@
   border-radius: 10px;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   gap: 20px;
   margin: 0 auto;
-  @media (min-width:$width-tablet+px){
+  @media (min-width: $width-tablet+px) {
     column-gap: 50px;
   }
 }
@@ -23,9 +23,17 @@
   justify-content: center;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 0;
   position: relative;
   overflow: hidden;
+  position: relative;
+
+  span {
+    color: var(--text-color);
+    transition: all 0.3s ease-in-out 0s;
+    position: absolute;
+    bottom: -1em;
+    text-shadow: 0 0 1px black;
+  }
 
   &:after {
     content: "";
@@ -54,6 +62,9 @@
   }
 
   &:hover {
+    span {
+      bottom: 1em;
+    }
     &:after {
       left: 110%;
     }
