--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -205,3 +205,16 @@
     opacity: 1;
   }
 }
+
+@keyframes swing-in-bottom-fwd {
+  0% {
+    transform: translateY(100%);
+    transform-origin: bottom;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    transform-origin: bottom;
+    opacity: 1;
+  }
+}
