--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -10,8 +10,20 @@
   grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   gap: 20px;
   margin: 0 auto;
+  opacity: 0;
+  transform: skewX(315deg) translateX(-100%);
+  transition: all 0.5s ease-in-out 0s;
   @media (min-width: $width-tablet+px) {
     column-gap: 50px;
+  }
+
+  &.magick {
+    opacity: 1;
+    transform: translateX(0);
+
+    .skills__item {
+      animation: swing-in-bottom-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) both 0.5s;
+    }
   }
 }
 .skills__item {
