--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -6,37 +6,9 @@
   align-items: center;
   justify-items: center;
   gap: 20px;
-
-  @media (min-width: $width-tablet+px) {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  }
+  // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.footer__logo {
-}
-
-.footer__social {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-
-  @media (min-width: $width-tablet+px) {
-    gap: 20px;
-    width: auto;
-  }
-}
-
-.footer__social-item {
-  &:hover {
-    .footer__social-link {
-      fill: rgba($color: #000000, $alpha: 0.7);
-      filter: drop-shadow(0px 0px 5px white);
-    }
-  }
-}
-
-.footer__social-link {
-  fill: black;
+.footer__contacts {
+  margin-bottom: 20px;
 }
