--- a/source/scss/blocks/github.scss
+++ b/source/scss/blocks/github.scss
@@ -4,21 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 200px;
   transition: all 0.5s ease 0s;
+
   &:hover {
     .github__link {
-      background: white;
-      fill: black;
-      box-shadow: inset 0 0 20px black;
-      height: 150px;
-      width: 150px;
     }
   }
-  @media (min-width: $width-mobile+px) {
-    padding: 60px 0;
-  }
 }
+
 .github__link {
   display: flex;
   align-items: center;
@@ -30,11 +23,14 @@
   transition: all 0.5s ease-in-out 0s;
   position: relative;
   overflow: hidden;
-  border: 1px solid black;
+  border: 0;
+
   svg {
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    box-shadow: 0 0 20px 0 black;
   }
+
   &:focus {
     box-shadow: 0 0 3 0px 0 white;
   }
