--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -16,7 +16,7 @@
 @import "blocks/github.scss";
 @import "blocks/skills.scss";
 @import "blocks/footer.scss";
-// @import "";
+@import "blocks/contacts.scss";
 // @import "";
 // @import "";
 // @import "";
