--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -719,9 +719,6 @@ h6 {
 
 .catalog__container {
   position: relative; }
-  @media (max-width: 374.98px) {
-    .catalog__container {
-      padding: 30px 40px 20px; } }
 
 .catalog-list {
   display: flex;
@@ -732,14 +729,17 @@ h6 {
   color: var(--basic-black);
   font-family: "Roboto", "Arial", sans-serif;
   margin: 0 auto;
-  padding: 10px;
+  padding: 20px;
+  background: #eaeaea8a;
+  border-radius: 10px;
   list-style: none;
   transition: all 0.7s ease;
   box-shadow: 0 0 10px 0 var(--opacity-black);
   position: relative; }
   @media (min-width: 767.98px) {
     .catalog-list {
-      scroll-padding-left: 10px; } }
+      scroll-padding-left: 20px;
+      scroll-margin-right: 20px; } }
   @media (min-width: 1300px) {
     .catalog-list {
       min-height: auto;
@@ -771,13 +771,8 @@ h6 {
   flex: 0 0 auto;
   border-radius: 15px;
   overflow: hidden;
-  width: 0px;
-  height: 0px;
-  opacity: 0;
-  transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
-  position: absolute;
-  transform: scale(0);
-  z-index: -1; }
+  z-index: -1;
+  display: none; }
   .catalog-item:hover {
     box-shadow: var(--catalog-item-shadow); }
     .catalog-item:hover .catalog-item__hover-menu {
@@ -791,14 +786,14 @@ h6 {
     .catalog-item:hover .catalog-item__img img {
       transform: scale(1.03); }
   .catalog-item.active {
+    display: block;
     opacity: 1;
     position: relative;
-    transform: scale(1);
     height: 100%;
     width: 100%;
     z-index: 3;
-    -webkit-animation: slit-in-vertical 0.45s ease-out both;
-            animation: slit-in-vertical 0.45s ease-out both; }
+    -webkit-animation: slit-in-vertical 0.45s ease-in-out 0s;
+            animation: slit-in-vertical 0.45s ease-in-out 0s; }
   @media (min-width: 767.98px) {
     .catalog-item {
       flex: 0 0 45%;
@@ -965,16 +960,20 @@ h6 {
   filter: grayscale(1);
   transform: scale(0.7);
   transition: all 0.3s linear; }
+  .catalog-filter__label svg {
+    width: 100%;
+    height: 100%;
+    filter: drop-shadow(0 0 2px black); }
   @media (max-width: 767.98px) {
     .catalog-filter__label {
       display: grid;
       place-items: center;
       width: 40px;
       height: 40px; } }
-  .catalog-filter__label svg {
-    width: 100%;
-    height: 100%;
-    filter: drop-shadow(0 0 2px black); }
+  @media (min-width: 374.98px) {
+    .catalog-filter__label[for="check-all"] {
+      position: relative;
+      left: 2px; } }
 
 .catalog-filter__checkbox:not(:checked) + .catalog-filter__label {
   -webkit-animation: flicker-1 2s linear infinite both;
@@ -1097,6 +1096,7 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
 
 .skills__list {
   background: #eaeaea8a;
+  box-shadow: 0 0 10px 0 var(--opacity-black);
   border-radius: 10px;
   padding: 20px;
   display: grid;
@@ -1129,6 +1129,9 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   position: relative;
   overflow: hidden;
   position: relative; }
+  .skills__item svg {
+    width: 45px;
+    height: 45px; }
   .skills__item span {
     color: var(--text-color);
     transition: all 0.3s ease-in-out 0s;
@@ -1158,34 +1161,12 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
     transition: all 0.7s ease 0.3s;
     box-shadow: 0 0 60px 5px white; }
   .skills__item:hover span {
-    bottom: 1em; }
+    bottom: 0em;
+    color: var(--link-hover-color);
+    text-shadow: var(--btn-text-shadow); }
   .skills__item:hover:after {
     left: 110%; }
   .skills__item:hover:before {
-    right: 110%; }
-
-.skills__item--more {
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.skills__item-more {
-  position: relative;
-  width: 10px;
-  height: 10px;
-  background: black;
-  border-radius: 50%; }
-  .skills__item-more::after, .skills__item-more::before {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: inherit;
-    display: block; }
-  .skills__item-more::after {
-    left: 110%; }
-  .skills__item-more::before {
     right: 110%; }
 
 .footer {
