--- a/source/scss/blocks/catalog-filter.scss
+++ b/source/scss/blocks/catalog-filter.scss
@@ -40,12 +40,6 @@
 }
 
 .catalog-filter__label {
-  @media (max-width: $width-tablet+px) {
-    display: grid;
-    place-items: center;
-    width: 40px;
-    height: 40px;
-  }
   cursor: pointer;
   filter: grayscale(1);
   transform: scale(0.7);
@@ -55,6 +49,19 @@
     width: 100%;
     height: 100%;
     filter: drop-shadow(0 0 2px black);
+  }
+
+  @media (max-width: $width-tablet+px) {
+    display: grid;
+    place-items: center;
+    width: 40px;
+    height: 40px;
+  }
+  @media (min-width: $width-mobile+px) {
+    &[for="check-all"] {
+      position: relative;
+      left: 2px;
+    }
   }
 }
 
