--- a/source/scss/blocks/catalog.scss
+++ b/source/scss/blocks/catalog.scss
@@ -6,10 +6,6 @@
 
 .catalog__container {
   position: relative;
-
-  @media (max-width: $width-mobile+px) {
-    padding: 30px 40px 20px;
-  }
 }
 
 .catalog-list {
@@ -21,14 +17,17 @@
   color: var(--basic-black);
   font-family: "Roboto", "Arial", sans-serif;
   margin: 0 auto;
-  padding: 10px;
+  padding: 20px;
+  background: #eaeaea8a;
+  border-radius: 10px;
   list-style: none;
   transition: all 0.7s ease;
   box-shadow: 0 0 10px 0 var(--opacity-black);
   position: relative;
 
   @media (min-width: $width-tablet+px) {
-    scroll-padding-left: 10px;
+    scroll-padding-left: 20px;
+    scroll-margin-right: 20px;
   }
 
   @media (min-width: $width-desktop+px) {
@@ -65,13 +64,14 @@
   flex: 0 0 auto;
   border-radius: 15px;
   overflow: hidden;
-  width: 0px;
-  height: 0px;
-  opacity: 0;
-  transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
-  position: absolute;
-  transform: scale(0);
+  // width: 0px;
+  // height: 0px;
+  // transition: all 0.5s ease, height 0.3s ease, opacity 0.1s ease;
+  // opacity: 0;
+  // position: absolute;
+  // transform: scale(0);
   z-index: -1;
+  display: none;
 
   &:hover {
     box-shadow: var(--catalog-item-shadow);
@@ -92,13 +92,14 @@
   }
 
   &.active {
+    display: block;
     opacity: 1;
     position: relative;
-    transform: scale(1);
+    // transform: scale(1);
     height: 100%;
     width: 100%;
     z-index: 3;
-    animation: slit-in-vertical 0.45s ease-out both;
+    animation: slit-in-vertical 0.45s ease-in-out 0s;
   }
   @media (min-width: $width-tablet+px) {
     flex: 0 0 45%;
